--- a/category.html
+++ b/category.html
@@ -17,7 +17,7 @@
 
     </div>
     <nav>
-      <a class="btn" href="index.html"><i class="fas fa-arrow-right"></i> الصفحة الرئيسية</a>
+      <a class="btn" href="police.html"><i class="fas fa-arrow-right"></i> الصفحة الرئيسية</a>
     </nav>
   </header>
 
