--- a/health.html
+++ b/health.html
@@ -16,9 +16,11 @@
         <p class="muted">دليل المخالفات والإجراءات الصحية الداخلية</p>
       </div>
     </div>
-    <nav>
-      <button class="btn ghost" id="open-about"><i class="fas fa-info-circle"></i> معلومات</button>
-    </nav>
+  <nav>
+  <a class="btn ghost" href="service.html">
+    <i class="fas fa-arrow-right"></i> العودة للرئيسية
+  </a>
+</nav>
   </header>
 
   <main class="container">
@@ -67,13 +69,7 @@
     <small>© 2025 — نظام مرجعي لمخالفات العاملين الصحيين</small>
   </footer>
 
-  <div id="about-modal" class="modal hidden">
-    <div class="modal-card">
-      <button class="close" id="close-about">&times;</button>
-      <h3>معلومات</h3>
-      <p>هذا المشروع يعرض مخالفات العاملين الصحيين مع العقوبات الخاصة بكل مخالفة. يمكنك الانتقال لأي تصنيف ثم عرض تفاصيل كل مخالفة.</p>
-    </div>
-  </div>
+
 
   <script src="assets/js/health.js"></script>
 </body>
