--- a/justice.html
+++ b/justice.html
@@ -17,7 +17,7 @@
       </div>
     </div>
   <nav>
-  <a class="btn ghost" href="service.html">
+  <a class="btn ghost" href="index.html">
     <i class="fas fa-arrow-right"></i> العودة للرئيسية
   </a>
 </nav>
