--- a/hdetail.html
+++ b/hdetail.html
@@ -28,7 +28,7 @@
   </main>
 
   <footer class="footer">
-    <small>انقر على أي مخالفة لمراجعة التفاصيل والعقوبة.</small>
+    <small>ادارة فلوريدا.</small>
   </footer>
 
   <script src="assets/js/health.js"></script>
