--- a/justice.html
+++ b/justice.html
@@ -68,7 +68,7 @@
   </main>
 
   <footer class="footer">
-    <small>© 2025 — نظام مرجعي لمخالفات العاملين الصحيين</small>
+    <small>© 2025 — نظام مرجعي لمخالفات العاملين في العدل</small>
   </footer>
 
 
