--- a/detail.html
+++ b/detail.html
@@ -28,7 +28,7 @@
   </main>
 
   <footer class="footer">
-    <small>لتعديل أو إضافة مواصفات—سيمكنك لاحقًا ربط لوحة إدارة</small>
+    <small>ادارة فلوريدا</small>
   </footer>
 
   <script src="assets/js/app.js"></script>
