--- a/police.html
+++ b/police.html
@@ -69,7 +69,7 @@
   </main>
 
   <footer class="footer">
-    <small>© 2025 — نظام مرجعي لمخالفات العاملين الصحيين</small>
+    <small>© 2025 — نظام مرجعي لمخالفات العاملين في الشرطة</small>
   </footer>
 
 
